v1.1.3 Z-index on cookie container class fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1123,6 +1123,7 @@ footer {
 
 .cookie-container.active {
   bottom: 0;
+  z-index: 1000;
 }
 
 .cookie-container p {
